--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>typegeek demo</title>
 		<script data-main="main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.min.js"></script>
+		<link href="../src/typegeek.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
